[gd_scene load_steps=4 format=3 uid="uid://brl005mrnmblk"]

[ext_resource type="Script" path="res://src/Scenes/Enemies/ammo_drop.gd" id="1_2fla3"]
[ext_resource type="PackedScene" uid="uid://bnqompfiufhuu" path="res://Assets/Art/3D Assets/AmmoDrop.gltf" id="1_ul5i5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2fla3"]

[node name="AmmoDrop" type="Node3D"]
script = ExtResource("1_2fla3")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.36198854, 0)

[node name="blockbench_export" parent="Marker3D" instance=ExtResource("1_ul5i5")]
transform = Transform3D(0.80391914, 0.5947386, 0, -0.5947386, 0.80391914, 0, 0, 0, 1, -0.13170052, -0.19566703, 0)

[node name="cuboid" parent="Marker3D/blockbench_export" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.022764966, 0.030771837, 0)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4599932, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_2fla3")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]

[editable path="Marker3D/blockbench_export"]
